--- a/build.gradle
+++ b/build.gradle
@@ -5,8 +5,6 @@ plugins {
 group 'org.example'
 version '1.0-SNAPSHOT'
 
-sourceCompatibility = 1.8
-
 repositories {
     mavenCentral()
 }
@@ -17,5 +15,10 @@ dependencies {
 
 test {
     useJUnitPlatform()
+}
+
+apply plugin: 'java'
+task myJavadocs(type: Javadoc) {
+    source = sourceSets.main.allJava
 }
 
